# 5map

./: .gitignore  KNOWLEDGE.md  README.md  RULES.md  ble_scanner.py  esp32_bridge.py  esp32s2_wifi_bridge.py  pyproject.toml  router_bridge.py
.beads/: issues.jsonl
app/: App.tsx  app.json  package-lock.json  package.json
backend/: build_api_layer.sh
backend/handlers/: api_handler.py  authorizer.py  preprocessor.py  ws_handler.py
dashboard/: data.jso  data.json  detail-ble.html  detail-channels.html  detail-csi-mapping.html  detail-csi.html  detail-gauges.html  detail-radar.html  detail-risk.html  environment.html  index.html  server.py  signal-processing.js  visual-indicators.html
docs/plans/: 2026-04-23-walk-and-tag-mapping.md
esp32/: CMakeLists.txt  boot.py  main.py  sdkconfig  sdkconfig.defaults
esp32/main/: main.c
firmware/: wifi_scanner_s2.py
ml/data/: fingerprint_db.py  oui_database.py  synthetic.py
ml/models/: device_fp.py  (+4 more)
pi-edge/: firstboot.sh
pineapple/: capture_agent.py  channel_hopper.py  config.yaml  esp32_serial_bridge.py  relay_server.py  setup_monitor.sh
scripts/: deploy.sh  deploy_sagemaker.sh  generate_test_data.py  merge_data.py  pineapple_live_bridge.py  setup_csi_router.sh  setup_pineapple.sh  start_sensors.sh  teardown.sh
terraform/: backend.tf  main.tf  variables.tf
tests/: test_buffer.py  test_channel_hopper.py  test_config_schema.py  test_fingerprint_collector.py  test_frame_router.py  test_mqtt_client.py  test_registry.py  test_rssi_parser.py  test_sensor_base.py
vm-image/: build.sh  meta-data  user-data
(+58 files in other folders)
